; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_object.c_create_object_constr.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_object.c_create_object_constr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@create_object_constr.ObjectW = internal constant [7 x i8] c"Object\00", align 1
@ObjectConstr_value = common dso_local global i32 0, align 4
@ObjectConstr_info = common dso_local global i32 0, align 4
@PROPF_CONSTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_object_constr(i32* %0, i32* %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32** %2, i32*** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @ObjectConstr_value, align 4
  %9 = load i32, i32* @PROPF_CONSTR, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32**, i32*** %6, align 8
  %12 = call i32 @create_builtin_constructor(i32* %7, i32 %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @create_object_constr.ObjectW, i64 0, i64 0), i32* @ObjectConstr_info, i32 %9, i32* %10, i32** %11)
  ret i32 %12
}

declare dso_local i32 @create_builtin_constructor(i32*, i32, i8*, i32*, i32, i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
